@@ -46,6 +46,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #10464: netrc now correctly handles lines with embedded '#' characters.
+
 - Added itertools.accumulate().
 
 - Issue #4113: Added custom ``__repr__`` method to ``functools.partial``.
